fix option icon fixed the alignment

--- a/css/global.css
+++ b/css/global.css
@@ -1524,7 +1524,7 @@ input[type="checkbox"]:checked+label::before {
     width: 48px;
     height: 48px;
     /* padding-top: 15px; */
-    margin-top: 10px;
+    margin-top: 12px;
 }
 
 .option-scan,
@@ -2381,7 +2381,7 @@ span.ei_invalid {
 .copy-txt {
     font-size: 46px;
     margin-top: -2px;
-    margin-left: 5px;
+    margin-left: 17px;
     font-size: 46px;
     position: absolute;
 }
